<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XCOM Field Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">XCOM Field Scanner</string>
    <string name="xcom_field_scanner">XCOM Field Scanner</string>
    <string name="splash_screen_containing_xcom_logo">Splash screen containing XCOM logo</string>
    <string name="splash_message_1_kernel_initialization">Inicializace jádra: XCOM-3.1.42b</string>
    <string name="splash_message_2_key_verification">Verifikace přístupového klíče</string>
    <string name="splash_message_3_sensor_calibration">Kalibrace senzorových polí</string>
    <string name="splash_message_4_nsa_notification">Notifikace NSA</string>
    <string name="splash_message_5_facebook_scan">Scan FB profilu ředitele XCOM</string>
    <string name="records_button_label">Záznamy</string>
    <string name="scanner_button_label">Scanner</string>
    <string name="sniffer_button_label">Sniffer</string>
    <string name="research_button_label">Výzkum</string>
    <string name="upgrades_button_label">Upgrady čtečky</string>

    <color name="SplashTextColor">#252525</color>
    <color name="TextBackgroundColor">#C5C5C5</color>

    <string name="title_activity_scanner_action">ScannerActionActivity</string>
    <string name="title_activity_record_list">Acquired records</string>
    <string name="title_activity_record_detail">Record detail</string>
    <string name="title_activity_reseach">Research</string>
    <string name="title_activity_research_detail">Research Detail</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_upgrade">Scanner Upgrades</string>
    <string name="title_activity_sniffer">Sniffer</string>
    <string name="pravidla">Pravidla</string>
    <string name="vyzkoumat">Vyzkoumat</string>
    <string name="title_activity_scanner_puzzle">Hacking</string>
    <string name="research_data_shpref_key">research-data</string>
    <string name="research_points_shpref_key">research-points</string>
    <string name="research_points_label">Body výzkumu:</string>
    <string name="zero_in_string">0</string>
    <string name="rychlost_snifferu_">Rychlost snifferu:</string>
    <string name="seznam_upgrad_">Seznam upgradů:</string>
    <string name="research_icon">Research Icon</string>
    <string name="x_com_sniffer">X-COM Sniffer</string>
    <string name="stav_">Stav:</string>
    <string name="s_la_sign_lu_">"Síla signálu: "</string>
    <string name="zb_v_s_">"Zbývá [s]: "</string>
    <string name="vzd_lenost_od_zdroje_">"Vzdálenost od zdroje: "</string>
    <string name="_asov_modifik_tor_">"Časový modifikátor: "</string>
    <string name="p_ehr_t_z_znam">Přehrát záznam</string>
    <string name="obrazov_z_znam">Obrazový záznam</string>

</resources>
