<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xcom_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HubActivity" >

    <Button
        android:id="@+id/recordsButton"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:alpha="1"
        android:layout_weight="1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/records_button_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2" >

        <Button
            android:id="@+id/scannerButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scanner_button_label" />

        <Button
            android:id="@+id/snifferButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/sniffer_button_label" />

    </LinearLayout>

    <Button
        android:id="@+id/researchButton"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:text="@string/research_button_label" />

    <Button
        android:id="@+id/upgradeButton"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:text="@string/upgrades_button_label" />

</LinearLayout>