<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SplashScreen" >

    <ImageView
        android:id="@+id/xcomSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/xcom_logo"
        android:contentDescription="@string/splash_screen_containing_xcom_logo"/>

    <TextView
        android:id="@+id/xcomSplashMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textSize="18sp"
        android:textColor="@color/SplashTextColor"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/splash_message_1_kernel_initialization" />

	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textColor="@color/SplashTextColor"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/xcom_field_scanner" />
</RelativeLayout>
