<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:id="@+id/snifferItemSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
   	<LinearLayout android:layout_width="match_parent"
   	    android:layout_height="wrap_content" >
        <TextView android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/s_la_sign_lu_" />
        <TextView android:id="@+id/snifferItemSignalStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout  android:layout_width="match_parent"
   	    android:layout_height="wrap_content" >
        <TextView android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zb_v_s_" />
        <TextView android:id="@+id/snifferItemRemains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<TextView android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/vzd_lenost_od_zdroje_"/>
		<TextView android:id="@+id/snifferDistance"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<TextView android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/_asov_modifik_tor_"/>
		<TextView android:id="@+id/snifferTimeModifier"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
    </LinearLayout>
    <ProgressBar android:id="@+id/snifferItemProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal" />
</LinearLayout>
